--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -3,6 +3,7 @@
 body {
     margin: 0%;
     width: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .topnav {
@@ -105,6 +106,19 @@ body {
 .closebtn:hover {
     font-size: 50px;
     color: darkcyan;
+}
+
+.footer {
+    margin-top: 40px;
+    font-size: 0.7em;
+    position: relative;
+    bottom: 0px;
+    background-color: #333;
+    height: 40px;
+    display: block;
+    text-align: center;
+    color: white;
+    padding-top: 25px;
 }
 
 
