--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,7 +34,7 @@ html {
     z-index: 0;
     background-color: white;
     width: 100%;
-    height: 50vh;
+    height: fit-content;
     display: inline-block;
     position: absolute;
     color: black;
@@ -45,7 +45,7 @@ html {
 }
 
 .botpanel p {
-    padding: 0px 20px 50px 20px;
+    padding: 0px 20px 30px 20px;
 }
 
 .botpanel h1 {
@@ -201,7 +201,7 @@ html {
         z-index: 0;
         background-color: white;
         width: 100%;
-        height: 100vh;
+        height: fit-content;
         display: inline-block;
         position: absolute;
         color: black;
