--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -4,11 +4,14 @@ body {
     margin: 0%;
     width: 100%;
     font-family: 'Montserrat', sans-serif;
+    background-image: url('./bg.png');
+    /* opacity: 10%; */
 }
 
 .topnav {
-    z-index: 100;
+    z-index: 200;
     background-color: darkcyan;
+    background-image: linear-gradient(to bottom right, #10bbb6, #20bfcf);
     width: 100%;
     height: auto;
     padding: 4px 0px 0px 0px;
@@ -59,7 +62,7 @@ body {
     opacity: 0.85;
     width: 0;
     position: fixed;
-    z-index: 101;
+    z-index: 201;
     height: 250px;
     top: 0;
     right: 0;
@@ -86,7 +89,7 @@ body {
 .sidepanel a:hover {
     /* font-size: 28px; */
     color: white;
-    background-color: darkcyan;
+    background-color: #10bbb6;
 }
 
 .closebtn {
@@ -114,11 +117,108 @@ body {
     position: relative;
     bottom: 0px;
     background-color: #333;
-    height: 40px;
+    height: fit-content;
     display: block;
     text-align: center;
     color: white;
     padding-top: 25px;
+    padding-bottom: 60px;
+}
+
+.footer h3 {
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+}
+
+.tbox {
+    /* position: absolute; */
+    /* left: 20%; */
+    text-align: center;
+    margin-top: 50px;
+    background-color: white;
+    width: 85%;
+    box-shadow: 5px 5px 10px lightgrey, -5px 0px 10px lightgrey;
+    border-radius: 20px;
+    display: block;
+    padding: 30px 30px;
+    margin: 50px auto 0px auto;
+}
+
+.tbox h1 {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+
+.fab {
+    cursor: pointer;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #10bbb6;
+    height: fit-content;
+    width: fit-content;
+    z-index: 50;
+    border-radius: 50px;
+    padding: 15px 20px;
+    color: white;
+    font-weight: bold;
+}
+
+.text1 {
+    grid-area: box2;
+    text-align: left;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0 0 0 20px;
+}
+
+.img1 {
+    grid-area: box1;
+    width: 42vw;
+    height: auto;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.pair {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: auto;
+    grid-template-areas: "box1 box2";
+}
+
+.footerLinks {
+    min-height: fit-content;
+    grid-area: box1;
+    text-align: left;
+    margin: 10px auto;
+    transition: 100ms;
+}
+
+.footerLinks a {
+    display: block;
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+}
+
+.footerLinks a:hover {
+    color: #10bbb6;
+}
+
+.footerDetails {
+    min-height: fit-content;
+    grid-area: box2;
+    text-align: left;
+    margin: 10px 0 0 0;
+}
+
+.footerDetails p {
+    margin: 0;
+    padding: 0;
+    font-size: 15px;
+    line-height: 2em;
 }
 
 
@@ -154,5 +254,55 @@ body {
     }
     .openbtn:hover {
         font-size: 24px;
+    }
+    .fab {
+        bottom: 10px;
+        right: 10px;
+    }
+    .tbox {
+        /* position: absolute; */
+        /* left: 20%; */
+        text-align: center;
+        margin-top: 50px;
+        background-color: white;
+        width: 90%;
+        box-shadow: 5px 5px 10px lightgrey, -5px 0px 10px lightgrey;
+        border-radius: 20px;
+        display: block;
+        padding: 10px 10px;
+        margin: 50px auto 0px auto;
+    }
+    .tbox h1 {
+        margin-top: 20px;
+    }
+    .pair {
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: auto auto;
+        grid-template-areas: "box1" "box2";
+    }
+    .text1 {
+        grid-area: box2;
+        text-align: left;
+        font-size: 0.85em;
+        padding: 0 20px 20px 20px;
+        margin: 0%;
+    }
+    .img1 {
+        grid-area: box1;
+        width: 77vw;
+        height: auto;
+        overflow: hidden;
+        margin: 0 auto 30px auto;
+        border-radius: 10px;
+    }
+    .footerLinks {
+        text-align: center;
+        width: 100vw;
+    }
+    .footerDetails {
+        text-align: center;
+        width: 100vw;
+        margin: 10px auto;
     }
 }
