--- a/static/css/index.css
+++ b/static/css/index.css
@@ -32,35 +32,42 @@ html {
 .botpanel {
     /* overflow: auto; */
     z-index: 0;
-    background-color: white;
+    /* background-color: rgb(238, 237, 237); */
+    /* background-image: url('../assets/bg.png'); */
     width: 100%;
     height: fit-content;
     display: inline-block;
     position: absolute;
-    color: black;
+    /* color: black; */
     font-size: 20px;
     top: 100%;
     font-family: 'Montserrat', sans-serif;
     /* text-align: center; */
 }
 
-.botpanel p {
-    padding: 0px 20px 30px 20px;
-}
 
-.botpanel h1 {
-    padding: 0px 20px 0px 20px;
-}
+/* .botpanel p {
+    padding: 0 20px;
+    margin-bottom: 20px;
+} */
+
+
+/* .botpanel h1 {
+    padding: 0;
+    margin: 0;
+} */
 
 .slides {
     width: 100%;
-    height: 100vh;
+    height: 101vh;
     /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
     position: absolute;
-    z-index: 0;
+    z-index: 100;
     display: inline-block;
     overflow: hidden;
     margin-top: -4px;
+    /* border-bottom-right-radius: 100px;
+    border-bottom-left-radius: 20px; */
 }
 
 .slides>img {
@@ -109,7 +116,7 @@ html {
 
 .scroll_btn {
     position: absolute;
-    height: 100px;
+    height: 50px;
     width: 50px;
     background: rgba(0, 0, 0, 0.5);
     color: white;
@@ -122,7 +129,7 @@ html {
 }
 
 .scroll_btn:hover {
-    font-size: 2.5em;
+    font-size: 2.2em;
     color: white;
 }
 
@@ -162,8 +169,10 @@ html {
         /* height: 100%;
     width: 100%; */
         object-fit: cover;
+        z-index: 0;
     }
     .slides>div {
+        display: none;
         /* The text box*/
         position: absolute;
         background: rgba(15, 15, 15, 0.8);
@@ -176,7 +185,7 @@ html {
         /* display: table-cell; */
         z-index: 10;
         position: inherit;
-        bottom: 11%;
+        /* bottom: 11%; */
         text-align: center;
         transition: ease-in 100ms;
     }
@@ -199,14 +208,14 @@ html {
     .botpanel {
         /* overflow: auto; */
         z-index: 0;
-        background-color: white;
+        /* background-color: white; */
         width: 100%;
         height: fit-content;
         display: inline-block;
         position: absolute;
         color: black;
         font-size: 20px;
-        top: 60%;
+        top: 50%;
         /* text-align: center; */
     }
 }
