--- a/product/style/style.css
+++ b/product/style/style.css
@@ -4,10 +4,10 @@ body {
 
 #box {
     display: block;
-    background-color: white;
+    /* background-color: white; */
     position: relative;
     /* padding-bottom: 50px; */
-    margin-top: 70px;
+    margin-top: 50px;
     padding-top: 20px;
 }
 
@@ -32,7 +32,7 @@ body {
     display: flex;
     height: fit-content;
     width: 100%;
-    background-color: white;
+    /* background-color: white; */
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -45,6 +45,7 @@ body {
     width: 250px;
     background-color: white;
     border-style: solid;
+    border-radius: 10px;
     border-width: thin;
     border-color: lightgrey;
     margin-left: 20px;
@@ -85,6 +86,8 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     width: cover;
     height: 200px;
 }
@@ -195,6 +198,9 @@ p {
 }
 
 @media (max-width: 767px) {
+    #box {
+        margin-top: 40px;
+    }
     #pro {
         text-align: center;
         font-family: 'Montserrat', sans-serif;
@@ -215,7 +221,7 @@ p {
     }
     .card {
         height: 300px;
-        width: 280px;
+        width: 85%;
         background-color: white;
         border-style: solid;
         border-width: thin;
