--- a/static/css/index.css
+++ b/static/css/index.css
@@ -58,14 +58,16 @@ html {
 } */
 
 .slides {
+    position: relative;
     width: 100%;
     height: 101vh;
     /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
-    position: absolute;
+    /* position: absolute; */
     z-index: 100;
     display: inline-block;
     overflow: hidden;
     margin-top: -4px;
+    margin-bottom: 50px;
     /* border-bottom-right-radius: 100px;
     border-bottom-left-radius: 20px; */
 }
@@ -95,7 +97,7 @@ html {
     /* min-height: auto; */
     /* display: table-cell; */
     z-index: 10;
-    position: inherit;
+    position: absolute;
     bottom: 0%;
     margin-left: auto;
     margin-right: auto;
@@ -116,6 +118,7 @@ html {
 
 .scroll_btn {
     position: absolute;
+    z-index: 101;
     height: 50px;
     width: 50px;
     background: rgba(0, 0, 0, 0.5);
@@ -152,12 +155,13 @@ html {
 @media (max-width: 767px) {
     .slides {
         width: 100%;
-        height: 60%;
-        position: absolute;
-        top: 65px;
+        height: 50%;
+        /* position: absolute; */
+        /* top: 65px; */
         z-index: 0;
         display: inline-block;
         overflow: hidden;
+        margin: 0;
         /* margin-top: -4px; */
     }
     .slides>img {
@@ -200,7 +204,7 @@ html {
         margin-bottom: auto;
         transition: ease-in 100ms;
         font-size: 1.8em;
-        top: 35%;
+        top: 25%;
     }
     .scroll_btn:hover {
         font-size: 1.8em;
