--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -5,6 +5,7 @@ body {
     width: 100%;
     font-family: 'Montserrat', sans-serif;
     background-image: url('./bg.png');
+    background-color: white;
     /* opacity: 10%; */
 }
 
@@ -33,9 +34,10 @@ body {
   } */
 
 .logo {
-    height: 60px;
+    height: 50px;
     margin-left: 15px;
     margin-bottom: 5px;
+    margin-top: -10px;
     vertical-align: middle;
 }
 
@@ -46,7 +48,7 @@ body {
     position: absolute;
     background: black;
     right: 12px;
-    top: 16px;
+    top: 10px;
     background-color: inherit;
     color: white;
     border: none;
@@ -141,7 +143,7 @@ body {
     text-align: center;
     margin-top: 50px;
     background-color: white;
-    width: 85%;
+    width: 75vw;
     box-shadow: 1px 1px 5px 0px lightgrey inset, -1px -1px 5px 0px lightgrey inset;
     border-radius: 10px;
     display: block;
@@ -163,7 +165,7 @@ body {
     background-color: #10bbb6;
     height: fit-content;
     width: fit-content;
-    z-index: 99;
+    z-index: 100;
     border-radius: 50px;
     padding: 10px 20px;
     color: white;
@@ -243,14 +245,15 @@ body {
     position: relative;
     z-index: 0;
     width: 100%;
-    margin-bottom: -40px;
+    margin-bottom: -80px;
+    margin-top: -10px;
     /* position: absolute;
     top: 30px; */
 }
 
 .bannerImage img {
     width: 100%;
-    height: 25vh;
+    height: 30vh;
     object-fit: cover;
     /* margin-bottom: -100px; */
 }
