fab & service tbox added

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -165,6 +165,7 @@ html {
         display: inline-block;
         overflow: hidden;
         margin: 0;
+        border-radius: 0;
         /* margin-top: -4px; */
     }
     .slides>img {
