--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -4,7 +4,7 @@ body {
 
 #box {
     display: block;
-    background-color: white;
+    /* background-color: white; */
     position: relative;
     /* padding-bottom: 50px; */
     margin-top: 70px;
@@ -32,7 +32,7 @@ body {
     display: flex;
     height: fit-content;
     width: 100%;
-    background-color: white;
+    background-color: transparent;
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -69,20 +69,17 @@ body {
     height: 200px;
 }
 
-
 .prod {
     width: cover;
     height: 150px;
     border-radius: 0px 0px 10px 10px;
 }
 
-
 .prodEtail {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
-
 
 .checked {
     color: orange;
@@ -97,7 +94,6 @@ p {
     color: green;
 }
 
-
 .proName {
     font-size: 30px;
     font-family: 'Barlow', sans-serif;
@@ -105,8 +101,6 @@ p {
     margin-top: 10px;
     font-weight: bold;
 }
-
-
 
 #close {
     width: 28px;
@@ -156,6 +150,7 @@ p {
         display: block;
         height: fit-content;
         margin: 0%;
+        background-color: transparent;
     }
     .card {
         height: 260px;
