--- a/services/style/services.css
+++ b/services/style/services.css
@@ -1,39 +1,73 @@
-body,
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 html {
     background-color: white;
     margin: 0;
     width: 100%;
 }
 
+.con {
+    margin: 0;
+    padding-top: 100px;
+    width: 100vw;
+}
 
-.container{
-    margin-top: 100px;
-    
+.text-center {
+    margin-top: 0;
 }
-.row{
-    margin-bottom: 15%;
+
+.tbox img {
+    border-radius: 10px;
 }
-#text,#text2{
+
+.b1 {
+    grid-area: box1;
+}
+
+.b2 {
+    grid-area: box2;
+}
+
+.pair img {
+    width: 35vw;
+    height: auto;
+}
+
+.t1 {
+    margin-left: 16px;
+}
+
+
+/* #second {
+    margin: 80px 0;
+} */
+
+#text,
+#text2 {
     font-size: 20px;
-    text-align: center;
-    padding: 30px;
-    
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+    /* padding: 30px; */
 }
 
 @media (max-width: 767px) {
-
-#second,#second2 {
-    display: flex;
-    flex-direction: column-reverse;
-  }
-
-  #text2 {
-    width: 100%;
-    float: right;
-  }
-  #img2 {
-    width: 100%;
-    float: right;
-  }
-}
+    .con {
+        padding-top: 130px;
+    }
+    #second {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .pair img {
+        width: 88vw;
+    }
+    .t1 {
+        margin: 0;
+    }
+    .text-center {
+        margin-bottom: 0;
+        margin-top: 1em;
+    }
 }
