--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -5,7 +5,7 @@ body {
     width: 100%;
     font-family: 'Montserrat', sans-serif;
     background-image: url('./bg.png');
-    background-color: white;
+    background-color: transparent;
     /* opacity: 10%; */
 }
 
@@ -178,6 +178,12 @@ body {
     display: inline-block;
     padding: 0;
     margin: 5px 0px 5px 5px;
+    font-size: 17px;
+}
+
+.fab a {
+    text-decoration: none;
+    color: white;
 }
 
 
