--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -3,7 +3,7 @@
 body {
     margin: 0%;
     width: 100%;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', serif;
     background-image: url('./bg.png');
     background-color: transparent;
     /* opacity: 10%; */
@@ -80,7 +80,7 @@ body {
     padding: 8px 8px 8px 32px;
     width: 100%;
     text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto', serif;
     font-size: 25px;
     color: white;
     border: 1px black;
@@ -194,7 +194,7 @@ body {
 .text1 {
     grid-area: box2;
     text-align: left;
-    font-size: 0.8em;
+    font-size: 1.1em;
     padding: 0;
     margin: 0 0 0 20px;
 }
