--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -80,7 +80,7 @@ body {
     padding: 8px 8px 8px 32px;
     width: 100%;
     text-decoration: none;
-    font-family: 'Roboto', serif;
+    font-family: 'Pacifico', cursive;
     font-size: 25px;
     color: white;
     border: 1px black;
@@ -191,6 +191,9 @@ body {
     font-size: 20px;
 } */
 
+.cursive{
+    font-family:'Pacifico', cursive;
+}
 .text1 {
     grid-area: box2;
     text-align: left;
