--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -60,6 +60,40 @@ body {
     width: 300px; */
 }
 
+#cardMain {
+    height: 560px;
+    width: 750px;
+    position:fixed;
+    top:100px;
+    left:50%;
+    z-index: 10;
+    background-color: white;
+    border-style: solid;
+    border-width: thin;
+    border-color: lightgrey;
+    margin-left: -375px;
+    margin-right: auto;
+    transition: all 100ms;
+    border-radius: 10px;
+}
+
+
+#close {
+    width: 28px;
+    height: 28px;
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    background-image: url("../../static/assets/close.png");
+    background-size: cover;
+    /* background-color: black;
+    border-radius: 50px; */
+    /* opacity: 0.5; */
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
 .prodImg {
     background-size: cover;
     background-position: center;
@@ -67,6 +101,15 @@ body {
     width: cover;
     border-radius: 10px 10px 0px 0px;
     height: 200px;
+}
+
+.prodImgMain {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: cover;
+    border-radius: 10px 10px 10px 10px;
+    height: 560px;
 }
 
 .prod {
