--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -134,7 +134,11 @@ body {
     padding: 0;
     margin: 0;
 }
-
+.container-fluid{
+    position: relative;
+    z-index: 98;
+    width: 75vw;
+}
 .tbox {
     /* position: absolute; */
     /* left: 20%; */
@@ -192,7 +196,9 @@ body {
 } */
 
 #cursive{
+    padding-top: 10%;   
     font-family: 'Cormorant Garamond', serif;
+    font-size: 1.8em;
 }
 .text1 {
     grid-area: box2;
