--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -196,14 +196,14 @@ body {
 } */
 
 #cursive{
-    padding-top: 10%;   
+    padding-top: 0;   
     font-family: 'Cormorant Garamond', serif;
-    font-size: 1.8em;
+    font-size: 1.9em;
 }
 .text1 {
     grid-area: box2;
     text-align: left;
-    font-size: 0.85em;
+    font-size: 1em;
     padding: 0;
     margin: 0 0 0 20px;
 }
@@ -341,7 +341,7 @@ body {
     .text1 {
         grid-area: box2;
         text-align: left;
-        font-size: 0.85em;
+        font-size: 1em;
         padding: 0 20px 20px 20px;
         margin: 0%;
     }
