--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -62,7 +62,7 @@ body {
 
 #cardMain {
     height: 560px;
-    width: 750px;
+    width: 80%;
     position:fixed;
     top:100px;
     left:50%;
@@ -71,7 +71,7 @@ body {
     border-style: solid;
     border-width: thin;
     border-color: lightgrey;
-    margin-left: -375px;
+    margin-left: -40%;
     margin-right: auto;
     transition: all 100ms;
     border-radius: 10px;
@@ -99,8 +99,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     width: cover;
-    border-radius: 10px 10px 0px 0px;
-    height: 200px;
+    border-radius: 10px 10px 10px 10px;
+    height: 260px;
 }
 
 .prodImgMain {
