--- a/recipe/style/style.css
+++ b/recipe/style/style.css
@@ -56,6 +56,10 @@ body {
     cursor: pointer;
 }
 
+.tbox{
+    z-index: -10;
+}
+
 #card-main {
     display: none;
     height: 50vw;
@@ -65,7 +69,7 @@ body {
     position: fixed;
     left: 10vw;
     top: 90px;
-    z-index: 10;
+    z-index: 100;
     background-color: white;
     /* border-style: solid;
     border-width: thin;
