--- a/product/style/style.css
+++ b/product/style/style.css
@@ -147,7 +147,7 @@ p {
 
 .proName {
     font-size: 30px;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
@@ -155,7 +155,7 @@ p {
 
 #proName-main {
     font-size: 30px;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
