--- a/recipe/style/style.css
+++ b/recipe/style/style.css
@@ -51,12 +51,12 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 40px;
-    padding-bottom: 20px;   
+    padding-bottom: 20px;
     transition: all 100ms;
     cursor: pointer;
 }
 
-.tbox{
+.tbox {
     z-index: -10;
 }
 
@@ -151,7 +151,7 @@ p {
 
 .proName {
     font-size: 30px;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
@@ -159,7 +159,7 @@ p {
 
 #proName-main {
     font-size: 30px;
-    font-family: 'Barlow', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
