--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -61,20 +61,21 @@ body {
 }
 
 #cardMain {
-    height: 560px;
-    width: 80%;
+    height: auto;
+    max-width: 900px;
+    width: 80vw;
     position: fixed;
     top: 100px;
-    left: 50%;
+    left: 20%;
     z-index: 10;
     background-color: white;
     border-style: solid;
     border-width: thin;
-    border-color: lightgrey;
-    margin-left: -40%;
-    margin-right: auto;
+    border-color: transparent;
+    /* margin-left: auto;
+    margin-right: auto; */
     transition: all 100ms;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 #close {
@@ -98,7 +99,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     width: cover;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 5px;
     height: 260px;
 }
 
@@ -107,7 +108,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     width: cover;
-    border-radius: 10px 10px 10px 10px;
+    border-radius: 5px;
     height: 560px;
 }
 
@@ -206,5 +207,19 @@ p {
         margin-bottom: 45px;
         transition: all 100ms;
         cursor: pointer;
+    }
+    #cardMain {
+        display: none;
+        height: 0;
+        width: 0;
+    }
+    .prodImgMain {
+        display: none;
+        /* background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: cover;
+        border-radius: 5px;
+        height: 80%; */
     }
 }
