--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -213,14 +213,15 @@ body {
     font-size: 1em;
     padding: 0;
     margin: 0 0 0 20px;
+    line-height: 2em;
 }
 
 .img1 {
     grid-area: box1;
-    width: 42vw;
+    width: 30vw;
     height: auto;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .pair {
@@ -348,6 +349,7 @@ body {
         font-size: 1em;
         padding: 0 20px 20px 20px;
         margin: 0%;
+        line-height: 1.5em;
     }
     .img1 {
         grid-area: box1;
