made the contact us button responsive

--- a/product/style/style.css
+++ b/product/style/style.css
@@ -217,6 +217,10 @@ p {
         font-size: 1.1em;
         margin-top: 20px;
     }
+    
+    #mobi{
+           display: none;
+    }
     .cardRow {
         display: block;
         height: fit-content;
