--- a/recipe/style/style.css
+++ b/recipe/style/style.css
@@ -219,6 +219,9 @@ p {
         font-size: 1.1em;
         margin-top: 20px;
     }
+    #mobi{
+        display: none;
+    }
     .cardRow {
         display: block;
         height: fit-content;
