--- a/product/style/style.css
+++ b/product/style/style.css
@@ -146,11 +146,11 @@ p {
 }
 
 .proName {
-    font-size: 30px;
+    font-size: 25px;
     font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 #proName-main {
@@ -217,9 +217,8 @@ p {
         font-size: 1.1em;
         margin-top: 20px;
     }
-    
-    #mobi{
-           display: none;
+    #mobi {
+        display: none;
     }
     .cardRow {
         display: block;
