--- a/recipe/style/style.css
+++ b/recipe/style/style.css
@@ -150,11 +150,11 @@ p {
 }
 
 .proName {
-    font-size: 20px;
+    font-size: 25px;
     font-family: 'Proza Libre', sans-serif;
     margin: 0px;
     margin-top: 10px;
-    /* font-weight: bold; */
+    font-weight: normal;
 }
 
 #proName-main {
@@ -219,7 +219,7 @@ p {
         font-size: 1.1em;
         margin-top: 20px;
     }
-    #mobi{
+    #mobi {
         display: none;
     }
     .cardRow {
