--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -13,15 +13,15 @@ body {
     position: fixed;
     z-index: 300;
     /* background-color: darkcyan; */
-    background-image: url(navbg.png), linear-gradient(to bottom right, #10bbb6, #20bfcf);
+    background-image: url(navbg3.png);
     width: 100%;
-    height: auto;
-    padding: 4px 0px 0px 0px;
+    height: 94px;
+    padding: 3.978px 0px 0px 0px;
     position: fixed;
     top: 0%;
     display: inline-block;
     overflow: hidden;
-    color: white;
+    color: rgba(255, 255, 255, 0);
     font-size: 50px;
     /* border-radius: 2px; */
     transition: 500ms;
@@ -148,7 +148,7 @@ body {
 .tbox {
     /* position: absolute; */
     /* left: 20%; */
-    background-image: url(./navbg.png);
+    /* background-image: url('/static/assets/bg.png'); */
     position: relative;
     z-index: 98;
     text-align: center;
@@ -287,6 +287,10 @@ body {
     filter: grayscale(100%);
 }
 
+.space-unser-navbar {
+    background-color: #10bbb6 !important;
+}
+
 
 /*MOBILE VIEW*/
 
@@ -294,7 +298,7 @@ body {
     .topnav {
         z-index: 300;
         width: 100%;
-        height: 65px;
+        height: 100px;
         padding: 0;
     }
     .logo {
@@ -334,6 +338,7 @@ body {
         text-align: center;
         margin-top: 50px;
         background-color: white;
+        /* background-image: url('/static/assets/bg.png'); */
         width: 88%;
         /* box-shadow: 2px 2px 5px lightgrey, -2px 0px 5px lightgrey; */
         display: block;
