--- a/about/style/abt.css
+++ b/about/style/abt.css
@@ -1,6 +1,5 @@
-
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Proza Libre', sans-serif;
     font-size: 20px;
 }
 
@@ -10,19 +9,18 @@ html {
     width: 100%;
 }
 
-.con {
-    margin: 0;
-    padding-top: 100px;
-    width: 100vw;
+.imgSide {
+    width: 40%;
+    float: left;
+    padding: 2%;
+    padding-top: 0%;
 }
 
-
-
+.about-content {
+    text-align: left;
+}
 
 @media (max-width: 767px) {
-    .con {
-        padding-top: 130px;
-    }
     #second {
         display: flex;
         flex-direction: column-reverse;
@@ -36,5 +34,10 @@ html {
     .text-center {
         margin-bottom: 0;
         margin-top: 1em;
+    }
+    .imgSide {
+        float: none;
+        padding: 0;
+        width: 30%;
     }
 }
