--- a/about/style/abt.css
+++ b/about/style/abt.css
@@ -10,9 +10,28 @@ body {
     padding-top: 0%;
 }
 
-.about-content {
-    text-align: left;
+#main{
+  background: #15aabf;
+  border-radius: 5px;
+  margin: 110px auto;
+  width: 70%;
+  padding: 5px 10px;
+  border: 2px dashed #fff;
+  outline: 2px dashed #1081e0;
+  box-shadow: 0 0 0 6px #15aabf, 0 0 1px 7px #1081e0;
 }
+
+p {
+  color: #fff;
+  text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+  line-height: 28px;
+
+  font-weight: normal;
+}
+
+
+
 
 @media (max-width: 767px) {
     #second {
