--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -139,7 +139,7 @@ p {
 
 .proName {
     font-size: 30px;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
