--- a/product/style/style.css
+++ b/product/style/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .card {
-    height: 300px;
+    height: 200px;
     width: 250px;
     background-color: white;
     border-style: solid;
@@ -86,8 +86,11 @@ body {
     background-repeat: no-repeat;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     width: cover;
     height: 200px;
+    backface-visibility: hidden;
 }
 
 #prodImg-main {
@@ -147,7 +150,7 @@ p {
 
 .proName {
     font-size: 25px;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
     margin: 0px;
     margin-top: 10px;
     font-weight: normal;
@@ -155,7 +158,7 @@ p {
 
 #proName-main {
     font-size: 30px;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
@@ -164,8 +167,8 @@ p {
 #disp-main {
     text-align: justify;
     padding: 0px 30px;
-    font-size: 1.2em;
-    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 1em;
+    font-family: 'Dancing Script', cursive;
 }
 
 #close {
@@ -182,6 +185,39 @@ p {
     background-position: center;
     background-repeat: no-repeat;
     cursor: pointer;
+}
+
+.card:hover .overlayImg {
+    opacity: 0.8;
+}
+
+.card:hover .overlayTxt {
+    opacity: 1;
+}
+
+.overlayImg {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: cover;
+    height: 200px;
+    backface-visibility: hidden;
+    opacity: 0;
+    background-image: linear-gradient(#232526, #414345);
+}
+
+.overlayTxt {
+    z-index: 500;
+    opacity: 0;
+    top: 35%;
+    position: relative;
+    text-align: center;
+    color: white;
+    font-size: 40px;
 }
 
 
@@ -226,7 +262,7 @@ p {
         margin: 0%;
     }
     .card {
-        height: 300px;
+        height: 200px;
         width: 90%;
         background-color: white;
         border-style: solid;
@@ -269,5 +305,34 @@ p {
         grid-template-areas: "box2" "box1";
         overflow: scroll;
         border-radius: 0;
+    }
+    .card:hover .overlayImg {
+        opacity: 0.8;
+    }
+    .card:hover .overlayTxt {
+        opacity: 1;
+    }
+    .overlayImg {
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+        width: cover;
+        height: 200px;
+        backface-visibility: hidden;
+        opacity: 0;
+        background-image: linear-gradient(#232526, #414345);
+    }
+    .overlayTxt {
+        z-index: 500;
+        opacity: 0;
+        top: 35%;
+        position: relative;
+        text-align: center;
+        color: white;
+        font-size: 40px;
     }
 }
