--- a/recipe/style/style.css
+++ b/recipe/style/style.css
@@ -41,7 +41,7 @@ body {
 }
 
 .card {
-    height: 300px;
+    height: 200px;
     width: 250px;
     background-color: white;
     border-style: solid;
@@ -51,7 +51,6 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 40px;
-    padding-bottom: 20px;
     transition: all 100ms;
     cursor: pointer;
 }
@@ -93,6 +92,8 @@ body {
     background-repeat: no-repeat;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
     width: cover;
     height: 200px;
 }
@@ -152,7 +153,7 @@ p {
 
 .proName {
     font-size: 25px;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
     margin: 0px;
     margin-top: 10px;
     font-weight: normal;
@@ -160,7 +161,7 @@ p {
 
 #proName-main {
     font-size: 30px;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
@@ -169,8 +170,8 @@ p {
 #disp-main {
     text-align: justify;
     padding: 0px 30px 50px 30px;
-    font-size: 1.2em;
-    font-family: 'PT Sans Narrow', sans-serif;
+    font-size: 1em;
+    font-family: 'Dancing Script', cursive;
 }
 
 #close {
@@ -203,6 +204,39 @@ p {
     margin-right: auto;
 }
 
+.card:hover .overlayImg {
+    opacity: 0.8;
+}
+
+.card:hover .overlayTxt {
+    opacity: 1;
+}
+
+.overlayImg {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    width: cover;
+    height: 200px;
+    backface-visibility: hidden;
+    opacity: 0;
+    background-image: linear-gradient(#232526, #414345);
+}
+
+.overlayTxt {
+    z-index: 500;
+    opacity: 0;
+    top: 25%;
+    position: relative;
+    text-align: center;
+    color: white;
+    font-size: 30px;
+}
+
 @media (max-width: 767px) {
     #box {
         margin-top: 40px;
@@ -229,7 +263,7 @@ p {
         margin: 0%;
     }
     .card {
-        height: 300px;
+        height: 200px;
         width: 85%;
         background-color: white;
         border-style: solid;
