--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -3,7 +3,8 @@
 body {
     margin: 0%;
     width: 100%;
-    font-family: 'Proza Libre', sans-serif;
+    font-family: 'Dancing Script', cursive;
+    font-size: 25px;
     background-image: url('./bg.png');
     background-color: transparent;
     /* opacity: 10%; */
@@ -293,9 +294,14 @@ body {
     z-index: 2;
 }
 
+.card img {
+    filter: grayscale(10%);
+}
+
 .card img:hover {
-    transform: scale(1.25);
-    filter: grayscale(100%);
+    transform: scale(1.3);
+    transition: 0.25s ease-in-out;
+    filter: saturate(2);
 }
 
 .space-unser-navbar {
@@ -304,7 +310,7 @@ body {
 
 .navbar-inline li {
     display: inline;
-    font-size: 20px;
+    font-size: 25px;
     /* border-right: 2px solid white; */
     padding-right: 20px;
 }
@@ -349,6 +355,32 @@ body {
     transform: translate(-50%, -50%);
     color: white;
     font-size: 200%;
+}
+
+#main {
+    background: #15aabf;
+    border-radius: 5px;
+    margin: 10px auto;
+    width: 80%;
+    padding: 5px 5px;
+    border: 2px dashed #fff;
+    outline: 2px dashed #1081e0;
+    box-shadow: 0 0 0 6px #15aabf, 0 0 1px 7px #1081e0;
+}
+
+.imgSide {
+    width: 30%;
+    float: left;
+    padding: 2%;
+    padding-top: 0%;
+}
+
+#main>p {
+    color: #fff;
+    text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: normal;
 }
 
 
@@ -447,6 +479,11 @@ body {
     }
     .centered {
         font-size: 100%;
+    }
+    .imgSide {
+        float: none;
+        padding: 0;
+        width: 100%;
     }
 }
 
