--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -358,6 +358,7 @@ body {
 }
 
 #main {
+    z-index: 1;
     background: #15aabf;
     border-radius: 5px;
     margin: 10px auto;
@@ -381,6 +382,15 @@ body {
     font-size: 20px;
     line-height: 28px;
     font-weight: normal;
+}
+
+.imageover {
+    z-index: 1600;
+    width: 20%;
+    top: -15%;
+    padding-left: 5%;
+    margin: 15px auto;
+    position: absolute;
 }
 
 
@@ -499,5 +509,27 @@ body {
 @media (max-width: 450px) {
     .topnav {
         background-image: url(waves3.png);
+    }
+}
+
+@media (max-width: 399px) {
+    .imageover {
+        z-index: 1600;
+        width: 30%;
+        top: 0;
+        padding-left: 1%;
+        position: absolute;
+    }
+}
+
+@media (min-width: 399px) and (max-width:1100px) {
+    .imageover {
+        display: none;
+        z-index: 1600;
+        width: 30%;
+        text-align: center;
+        top: 0;
+        margin: auto;
+        position: absolute;
     }
 }
