--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -11,6 +11,10 @@ body {
     padding-top: 20px;
 }
 
+.Heders{
+    font-family: 'Dancing Script', cursive;
+}
+
 #pro {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
